# simple_hr_assistant

./: .gitignore  README.md  langgraph.json  pyproject.toml
app/: config.py
app/ingestion/: ingest.py  query.py  vectorstore.py
app/rag/: __init__.py  agent.py  main.py
app/rag/utils/: __init__.py  nodes.py  state.py  tools.py
data/docs/: benefits_policy.md  example_policy.md  parental_leave_policy.md  security_policy.md  travel_policy.md
data/docs/benefits/: flexible_benefits_faq.md
data/docs/finance/: corporate_card_policy.md  expense_reimbursement_policy.md
data/docs/handbook/: workplace_conduct_guidelines.md
data/docs/leave/: sick_leave_policy.md
data/docs/onboarding/: manager_onboarding_checklist.md  new_hire_onboarding_guide.md
data/docs/performance/: goal_setting_guidelines.md  performance_review_policy.md
data/docs/security/: acceptable_use_policy.md
data/docs/training/: employee_training_policy.md  manager_training_expectations.md
data/docs/travel/: travel_expense_examples.md
